syntax = "proto3";

package sem.middleware.planning;

option go_package = "github.com/go-go-golems/pinocchio/pkg/sem/pb/proto/sem/middleware;middleware";

import "google/protobuf/struct.proto";

// Shared identifier for a single planner run.
message PlanningRun {
  string run_id = 1;
  string provider = 2;
  string planner_model = 3;
  int32 max_iterations = 4;
}

// Fired once per run when planning begins.
message PlanningStarted {
  PlanningRun run = 1;
  int64 started_at_unix_ms = 2;
}

// Fired for each iteration the planner produces.
message PlanningIteration {
  PlanningRun run = 1;
  int32 iteration_index = 2;
  string action = 3;
  string reasoning = 4;
  string strategy = 5;
  string progress = 6;
  string tool_name = 7;
  google.protobuf.Struct extra = 8;
  int64 emitted_at_unix_ms = 9;
  string reflection_text = 10;
}

// Optional intermediate reflection snapshots keyed by iteration.
message PlanningReflection {
  PlanningRun run = 1;
  int32 iteration_index = 2;
  string reflection_text = 3;
  double progress_score = 4;
  int64 emitted_at_unix_ms = 5;
}

// Fired when planning concludes (even with zero iterations).
message PlanningCompleted {
  PlanningRun run = 1;
  int32 total_iterations = 2;
  string final_decision = 3;
  string status_reason = 4;
  string final_directive = 5;
  int64 completed_at_unix_ms = 6;
}

// Execution starts once a final directive is available.
message ExecutionStarted {
  string run_id = 1;
  string executor_model = 2;
  string directive = 3;
  int64 started_at_unix_ms = 4;
}

// Completion of the execution phase; reserved for richer result payloads.
message ExecutionCompleted {
  string run_id = 1;
  int64 completed_at_unix_ms = 2;
  string status = 3;
  string error_message = 4;
  int32 tokens_used = 5;
  int32 response_length = 6;
  google.protobuf.Struct extra = 7;
}
